--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">challange-sprint01-claimnomore</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="login_button_text">Login</string>
+    <string name="claim_logo">CLAIM</string>
+    <string name="nomore_logo">nomore</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
