--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="login_button_text">Login</string>
     <string name="claim_logo">CLAIM</string>
     <string name="nomore_logo">nomore</string>
+    <string name="usuario_text">Usuário</string>
+    <string name="senha_text">Senha</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
