--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="nomore_logo">nomore</string>
     <string name="usuario_text">Usuário</string>
     <string name="senha_text">Senha</string>
+    <string name="entrar_funcionario">entrar (funcionario)</string>
+    <string name="entrar_dentista">entrar (dentista)</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
