--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="senha_text">Senha</string>
     <string name="entrar_funcionario">entrar (funcionario)</string>
     <string name="entrar_dentista">entrar (dentista)</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nome_text">Nome</string>
+    <string name="funcao_text">Função</string>
+    <string name="cpf_text">CPF</string>
+    <string name="numero_text">Numero</string>
+    <string name="notafiscal_text">Nota Fiscal</string>
 </resources>
