--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,10 @@
     <string name="nome_text">Nome</string>
     <string name="funcao_text">Função</string>
     <string name="cpf_text">CPF</string>
-    <string name="numero_text">Numero</string>
+    <string name="numero_text">Número</string>
+    <string name="endereco_text">Endereço</string>
+    <string name="dentista_text">Dentista</string
+    <string name="signup_text">Sign Up</string>
     <string name="notafiscal_button_text">Nota Fiscal</string>
     <string name="sinistro_button_text">Sinistro</string>
     <string name="sinistrofalso_button_text">Sinistro Falso</string>
